--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/xuanvi26/github-avatar-downloader#readme",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "npm": "^6.1.0",
     "request": "^2.87.0"
   }
